cot-macros/tests/ui/func_query_field_ref_non_existing_method.rs
use cot::db::{model, query};

#[model]
struct MyModel {
    #[model(primary_key)]
    id: i32,
    name: String,
}

fn main() {
    query!(MyModel, $name.non_existing_method());
}